k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  labels:
    app.kubernetes.io/name: nginx-app
spec:
  selector:
    app.kubernetes.io/name: nginx-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
